// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract() on real-site raw fixtures > T1.27 snapshot is stable: cal 1`] = `
{
  "baseSize": 16,
  "layout": {
    "breakpoints": [
      640,
      768,
      809,
      810,
      1024,
    ],
    "containerMaxWidth": 1200,
    "density": "airy",
    "gutter": 12,
  },
  "radii": {
    "button": undefined,
    "card": 16,
    "input": undefined,
    "pillButtons": false,
    "scale": [
      16,
      12,
      8,
    ],
  },
  "roles": {
    "background": "#f4f4f4",
    "surface": "#ffffff",
    "surfaceAlt": "#e5e7eb",
    "textPrimary": "#242424",
    "textSecondary": "#898989",
  },
  "sectionKinds": [
    "hero",
    "content",
    "content",
    "features",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
  ],
  "spacing": {
    "baseUnit": 4,
    "scale": [
      2,
      4,
      10,
      12,
      16,
      24,
      32,
      48,
      96,
    ],
    "sectionPaddingY": 327,
  },
  "typeStyles": [
    {
      "lineHeight": 1.1,
      "role": "h1",
      "size": 64,
      "weight": 600,
    },
    {
      "lineHeight": 1.3,
      "role": "h3",
      "size": 18,
      "weight": 300,
    },
    {
      "lineHeight": 1.5,
      "role": "body",
      "size": 16,
      "weight": 300,
    },
    {
      "lineHeight": 1.4,
      "role": "small",
      "size": 14,
      "weight": 300,
    },
    {
      "lineHeight": 1,
      "role": "code",
      "size": 14,
      "weight": 600,
    },
  ],
}
`;

exports[`extract() on real-site raw fixtures > T1.27 snapshot is stable: linear 1`] = `
{
  "baseSize": 15,
  "layout": {
    "breakpoints": [
      560,
      640,
      768,
      1024,
      1280,
    ],
    "containerMaxWidth": 1344,
    "density": "airy",
    "gutter": null,
  },
  "radii": {
    "button": 8,
    "card": 9,
    "input": undefined,
    "pillButtons": false,
    "scale": [
      12,
      8,
      9,
      6,
      9999,
      16,
      22,
      4,
    ],
  },
  "roles": {
    "accent": "#e5e5e6",
    "accentForeground": "#08090a",
    "background": "#08090a",
    "border": "#222324",
    "surface": "#0f1011",
    "surfaceAlt": "#161718",
    "textMuted": "#62666d",
    "textPrimary": "#f7f8f8",
    "textSecondary": "#8a8f98",
  },
  "sectionKinds": [
    "nav",
    "hero",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "cta",
    "footer",
  ],
  "spacing": {
    "baseUnit": 4,
    "scale": [
      4,
      6,
      8,
      10,
      12,
      16,
      24,
      32,
      46,
      128,
    ],
    "sectionPaddingY": 128,
  },
  "typeStyles": [
    {
      "lineHeight": 1,
      "role": "h1",
      "size": 72,
      "weight": 510,
    },
    {
      "lineHeight": 1,
      "role": "h2",
      "size": 48,
      "weight": 510,
    },
    {
      "lineHeight": 1.5,
      "role": "h3",
      "size": 13,
      "weight": 510,
    },
    {
      "lineHeight": 1.75,
      "role": "h4",
      "size": 16,
      "weight": 590,
    },
    {
      "lineHeight": 1.33,
      "role": "body-lg",
      "size": 24,
      "weight": 400,
    },
    {
      "lineHeight": 1.6,
      "role": "body",
      "size": 15,
      "weight": 400,
    },
    {
      "lineHeight": 1.71,
      "role": "small",
      "size": 14,
      "weight": 400,
    },
    {
      "lineHeight": 1.4,
      "role": "caption",
      "size": 12,
      "weight": 510,
    },
    {
      "lineHeight": 2.75,
      "role": "button",
      "size": 16,
      "weight": 510,
    },
    {
      "lineHeight": 1.4,
      "role": "code",
      "size": 12,
      "weight": 400,
    },
  ],
}
`;

exports[`extract() on real-site raw fixtures > T1.27 snapshot is stable: ramp 1`] = `
{
  "baseSize": 16,
  "layout": {
    "breakpoints": [
      480,
      767,
      768,
      992,
      1024,
    ],
    "containerMaxWidth": 1120,
    "density": "comfortable",
    "gutter": null,
  },
  "radii": {
    "button": 6,
    "card": 16,
    "input": 8,
    "pillButtons": false,
    "scale": [
      12,
      16,
      6,
      8,
      4,
      10,
      3,
    ],
  },
  "roles": {
    "accent": "#e4f222",
    "accentForeground": "#0c0a08",
    "background": "#ffffff",
    "border": "#e5e7eb",
    "surface": "#f4f2f0",
    "surfaceAlt": "#fafafa",
    "textMuted": "#a3a3a3",
    "textPrimary": "#0c0a08",
    "textSecondary": "#6d6c6b",
  },
  "sectionKinds": [
    "nav",
    "hero",
    "content",
    "features",
    "content",
    "content",
    "content",
    "content",
    "content",
    "content",
    "cta",
    "footer",
  ],
  "spacing": {
    "baseUnit": 8,
    "scale": [
      4,
      8,
      12,
      16,
      20,
      24,
      32,
      48,
      64,
      128,
    ],
    "sectionPaddingY": 96,
  },
  "typeStyles": [
    {
      "lineHeight": 1,
      "role": "h1",
      "size": 64,
      "weight": 400,
    },
    {
      "lineHeight": 1.14,
      "role": "h2",
      "size": 28,
      "weight": 400,
    },
    {
      "lineHeight": 1.17,
      "role": "h3",
      "size": 24,
      "weight": 400,
    },
    {
      "lineHeight": 1.33,
      "role": "body-lg",
      "size": 18,
      "weight": 400,
    },
    {
      "lineHeight": 1.38,
      "role": "body",
      "size": 16,
      "weight": 400,
    },
    {
      "lineHeight": 1.46,
      "role": "small",
      "size": 13,
      "weight": 400,
    },
    {
      "lineHeight": 2.2,
      "role": "caption",
      "size": 10,
      "weight": 400,
    },
    {
      "lineHeight": 1,
      "role": "button",
      "size": 14,
      "weight": 400,
    },
  ],
}
`;

exports[`extract() on real-site raw fixtures > T1.27 snapshot is stable: stripe 1`] = `
{
  "baseSize": 16,
  "layout": {
    "breakpoints": [
      600,
      639,
      640,
      939,
      940,
    ],
    "containerMaxWidth": 1264,
    "density": "comfortable",
    "gutter": 16,
  },
  "radii": {
    "button": 4,
    "card": 6,
    "input": undefined,
    "pillButtons": false,
    "scale": [
      6,
      4,
      5,
      8,
      426,
      439,
      415,
      10,
    ],
  },
  "roles": {
    "accent": "#533afd",
    "accentForeground": "#ffffff",
    "background": "#ffffff",
    "border": "#e5edf5",
    "link": "#533afd",
    "success": "#81b81a",
    "surface": "#e5edf5",
    "surfaceAlt": "#f8fafd",
    "textMuted": "#64748d",
    "textPrimary": "#061b31",
    "textSecondary": "#50617a",
  },
  "sectionKinds": [
    "nav",
    "hero",
    "pricing",
    "content",
    "stats",
    "features",
    "features",
    "content",
    "content",
    "footer",
  ],
  "spacing": {
    "baseUnit": 8,
    "scale": [
      4,
      8,
      16,
      24,
      32,
      40,
      48,
      64,
      80,
      96,
    ],
    "sectionPaddingY": 94,
  },
  "typeStyles": [
    {
      "lineHeight": 1.03,
      "role": "h1",
      "size": 56,
      "weight": 300,
    },
    {
      "lineHeight": 1.1,
      "role": "h2",
      "size": 32,
      "weight": 300,
    },
    {
      "lineHeight": 1.12,
      "role": "h3",
      "size": 26,
      "weight": 300,
    },
    {
      "lineHeight": 1.4,
      "role": "h4",
      "size": 16,
      "weight": 300,
    },
    {
      "lineHeight": 1.4,
      "role": "body-lg",
      "size": 18,
      "weight": 300,
    },
    {
      "lineHeight": 1.2,
      "role": "body",
      "size": 16,
      "weight": 400,
    },
    {
      "lineHeight": 1.2,
      "role": "small",
      "size": 14,
      "weight": 400,
    },
    {
      "lineHeight": 1.45,
      "role": "caption",
      "size": 10,
      "weight": 300,
    },
    {
      "lineHeight": 1,
      "role": "button",
      "size": 16,
      "weight": 400,
    },
    {
      "lineHeight": 2,
      "role": "code",
      "size": 12,
      "weight": 500,
    },
  ],
}
`;
